--- a/Day 23/homework/index.html
+++ b/Day 23/homework/index.html
@@ -12,7 +12,7 @@
     <br>
     <i>გამარჯობა მე ვარ ლუხუმი მანქანების მოყვარული უმეტესად იაპონური მანქანების მოყვარული და ეხლა გაგაცნობთ იაპონურ მანქანას</i>
     <br>
-    <b>თუ დაგაინტერესდა იაპონური მანქანა გამომყევი და გასწავლი რაღაცეებს NISSAN SILVIA S14-ზე</b>
+    <b>მე ეხლა გეტყვი რაღაცეებს იაპონურ მანქანაზე ანუ NISSAN SILVIA KOUKI S14-ზე </b>
     <br>
     <a href="./index2.html"><button>CAR</button></a>
     <br>
